--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,26 +3,29 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">The Unix shell</a></td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">The Unix shell</a></td> </tr>
+      <tr> <td>11:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>11:45</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">More of The Unix shell</a></td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>14:00</td>  <td><a href = "http://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
+      <tr> <td>15:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:45</td>  <td><a href = "http://swcarpentry.github.io/python-novice-inflammation/">More Programming with Python</a></td> </tr>      
+      <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">Version control with Git</a></td> </tr>
+      <tr> <td>11:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>11:45</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">More Version control with Git</a></td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>14:00</td>  <td><a href = "http://swcarpentry.github.io/python-novice-gapminder/">Plotting and Programming in Python</a></td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>14:45</td>  <td><a href = "http://swcarpentry.github.io/python-novice-gapminder/">More Plotting and Programming in Python</a></td> </tr>
+      <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>15:05</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>15:10</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
