--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,6 +1,6 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  This particular workshop is only <strong>open to members of the Tufts community</strong> The course is aimed at graduate students and other researchers.
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
