--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -20,9 +20,9 @@
       <tr> <td>11:30</td>  <td>Coffee</td> </tr>
       <tr> <td>11:45</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">More Version control with Git</a></td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td><a href = "http://swcarpentry.github.io/python-novice-gapminder/">Plotting and Programming in Python</a></td> </tr>
+      <tr> <td>14:00</td>  <td><a href = "https://swcarpentry.github.io/python-novice-inflammation/06-func/index.html">Programming with Python Part 2</a></td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>14:45</td>  <td><a href = "http://swcarpentry.github.io/python-novice-gapminder/">More Plotting and Programming in Python</a></td> </tr>
+      <tr> <td>14:45</td>  <td><a href = "https://swcarpentry.github.io/python-novice-inflammation/06-func/index.html">More Programming with Python Part 2</a></td> </tr>
       <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>15:05</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>15:10</td>  <td>END</td> </tr>
