--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -4,12 +4,10 @@
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">The Unix shell</a></td> </tr>
-      <tr> <td>11:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>11:45</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">More of The Unix shell</a></td> </tr>
+      <tr> <td>11:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td><a href = "http://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
-      <tr> <td>15:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:45</td>  <td><a href = "http://swcarpentry.github.io/python-novice-inflammation/">More Programming with Python</a></td> </tr>      
+      <tr> <td>14:00</td>  <td>Python Part 1</td> </tr>
+      <tr> <td>15:30</td>  <td>Break - 15 minutes</td> </tr>      
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
@@ -17,12 +15,10 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">Version control with Git</a></td> </tr>
-      <tr> <td>11:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>11:45</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">More Version control with Git</a></td> </tr>
+      <tr> <td>11:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td><a href = "https://swcarpentry.github.io/python-novice-inflammation/06-func/index.html">Programming with Python Part 2</a></td> </tr>
-      <tr> <td>15:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:45</td>  <td><a href = "https://swcarpentry.github.io/python-novice-inflammation/06-func/index.html">More Programming with Python Part 2</a></td> </tr>
+      <tr> <td>14:00</td>  <tdPython Part 2</td> </tr>
+      <tr> <td>15:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:05</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>17:10</td>  <td>END</td> </tr>
