--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -6,7 +6,7 @@
       <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/shell-novice/">The Unix shell</a></td> </tr>
       <tr> <td>11:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td>Python Part 1</td> </tr>
+      <tr> <td>14:00</td>  <td><a href= "https://swcarpentry.github.io/python-novice-gapminder/">Python Part 1</a></td> </tr>
       <tr> <td>15:30</td>  <td>Break - 15 minutes</td> </tr>      
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
@@ -17,7 +17,7 @@
       <tr> <td>10:00</td>  <td><a href = "http://swcarpentry.github.io/git-novice/">Version control with Git</a></td> </tr>
       <tr> <td>11:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td>Python Part 2</td> </tr>
+      <tr> <td>14:00</td>  <td><a href= "https://swcarpentry.github.io/python-novice-gapminder/">Python Part 2</a></td> </tr>
       <tr> <td>15:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:05</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
