--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,10 +3,10 @@
     <h3>Day 1 - November 15</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>9:00</td>  <td><a href= "https://swcarpentry.github.io/python-novice-gapminder/">Python Part 1</a></td> </tr>
+      <tr> <td>9:00</td>  <td><a href= "https://tufts-carpentries.github.io/python-novice-gapminder/">Python Part 1</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break - 15 minutes</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href= "https://swcarpentry.github.io/python-novice-gapminder/">Python Part 2</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href= "https://tufts-carpentries.github.io/python-novice-gapminder/">Python Part 2</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break - 15 minutes</td> </tr>      
       <tr> <td>16:00</td>  <td>END</td> </tr>
     </table>
